--- a/app/views/lockup/lockup/unlock.html.erb
+++ b/app/views/lockup/lockup/unlock.html.erb
@@ -8,7 +8,7 @@
 
 <%= form_for :lockup, url: { action: 'unlock' } do |form| %>
   <% unless @wrong == true %>
-    <p><%= form.password_field "codeword", placeholder: "code word" %></p>
+    <p><%= form.password_field "codeword", placeholder: "" %></p>
   <% else %>
     <p><%= form.password_field "codeword", value: @codeword, class: 'nope' %></p>
   <% end %>
@@ -24,5 +24,5 @@
     <%= form.hidden_field "return_to", value: @return_to %>
   <% end %>
     
-  <p><%= button_tag "Go" %></p>
+  <p><%= button_tag "Enter" %></p>
 <% end %>
