--- a/app/views/lockup/lockup/unlock.html.erb
+++ b/app/views/lockup/lockup/unlock.html.erb
@@ -1,4 +1,4 @@
-<h1>Please enter the code word to continue&hellip;</h1>
+<h1>Please enter password.&hellip;</h1>
 
 <% if @wrong %>
   <div class="hmm">
